# RAGnificent

./: .dockerignore  .env.example  .gitignore  .sourcery.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.optimized  Dockerfile.simple  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PLANNING.md  PRD.md  README.md  REFACTORING_SUMMARY.md  TASKS.md  benchmark_core_engine.py  benchmark_results.txt  build_all.ps1  build_all.sh  docker-compose.yml  embedded_chunks.jsonl  end_to_end_rag.py  errors.txt  example_urls.txt  flowchart.dot  justfile  links.txt  links_old.txt  main.py  output.md  pyproject.toml  pytest.ini  rag_demo.py  requirements-docker.txt  requirements.txt  run_scraper.py  run_tests.py  (+16 more)
.github/: CI_CD_GUIDE.md
.github/workflows/: CI.yml  claude-code-review.yml  claude.yml  ragnificent-benchmark.yml  ragnificent-ci.yml  ragnificent-docs.yml  ragnificent-release.yml  ragnificent-security.yml  rust.yml  scorecard.yml  security.yml  unified-ci.yml
RAGnificent/: __main__.py  api.py  cli.py  cli.py.bak  ragnificent_rs.py
RAGnificent/core/: __init__.py  _imports.py  async_scraper.py  cache.py  config.py  feature_flags.py  logging.py  resource_manager.py  scraper.py  security.py  stats.py  throttle.py  validators.py
RAGnificent/rag/: chat.py  demo.py  embedding.py  pipeline.py  search.py  vector_store.py
RAGnificent/tui/: __init__.py  keyboard.py  layout.py
RAGnificent/utils/: chunk_utils.py  sitemap.py  sitemap_utils.py  version.py
backup/: embedding.py  pipeline.py  search.py  vector_store.py
benches/: RAGnificent_bench.rs  chunker_bench.rs
benchmark_history/: benchmark_results_20250615_182548.json  benchmark_results_20250615_184416.json
benchmark_reports/: benchmark_report.md  performance_history.md
chunks/2/: chunks.jsonl
chunks/3_library_index/: chunks.jsonl
chunks/@nytimes/: chunks.jsonl
chunks/api_character/: chunks.jsonl
chunks/assignments_language-subtag-registry_language-subtag-registry/: chunks.jsonl
chunks/chart/: chunks.jsonl
chunks/chart_top/: chunks.jsonl
chunks/city_us_new-york/: chunks.jsonl
chunks/coronavirus/: chunks.jsonl
chunks/data_receipts/: chunks.jsonl
chunks/en-US_docs_Web_HTML_Element/: chunks.jsonl
chunks/explore/: chunks.jsonl
chunks/index/: chunks.jsonl
chunks/jobs/: chunks.jsonl
chunks/leagues_NBA_2025_totals/: chunks.jsonl
chunks/live/: chunks.jsonl
chunks/natgeo/: chunks.jsonl
chunks/news/: chunks.jsonl
chunks/quote_AMD_history/: chunks.jsonl
chunks/r_MachineLearning/: chunks.jsonl
chunks/repos_torvalds_linux/: chunks.jsonl
chunks/robots/: chunks.jsonl
chunks/s/: chunks.jsonl
chunks/s_berlin_homes/: chunks.jsonl
chunks/sitemap/: chunks.jsonl
chunks/t_javascript/: chunks.jsonl
chunks/t_wallpapers/: chunks.jsonl
chunks/tag_python/: chunks.jsonl
chunks/tags/: chunks.jsonl
chunks/v0_topstories/: chunks.jsonl
chunks/wiki_List_of_programming_languages/: chunks.jsonl
chunks/wiki_日本/: chunks.jsonl
chunks/wmt19_translation-task/: chunks.jsonl
chunks/works_OL45883W/: chunks.jsonl
chunks/xml/: chunks.jsonl
chunks/year_world_2025/: chunks.jsonl
config/: README.md
config/environments/: README.md  development.yaml  production.yaml  testing.yaml
config/examples/: README.md  default.yaml  local.json  pipeline_example.yaml  production.yaml
data/: document_chunks.json  embedded_chunks.json  raw_documents.json  test_chunks.json  test_documents.json  test_embedded_chunks.json
demo_chunks/3_tutorial_introduction/: chunks.jsonl
demo_output/: 3_tutorial_introduction.md
docker/: development.yml  production.yml
docs/: CONFIGURATION.md  FEATURES.md  JS_RENDERING.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  PLANNING.md  REFACTORING_SUMMARY.md  TASKS.md  TEST_PERFORMANCE_ANALYSIS.md  TEST_QUALITY_AUDIT.md  ssh-cheatsheet.md
docs/assets/: flowchart.dot
examples/: README.md  basic_demo.py  config_example.py  custom_scraper_example.py  demo_formats.py  hello.py  rag_pipeline_example.py  rag_workflow_demo.py
examples/demo_output/: output.markdown  output.md  output.xml
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
scripts/: benchmark_tracker.py  generate_flowchart.py  run_benchmarks.ps1  setup_viz.ps1  sync_requirements.py  update_readme_metrics.py  visualize_benchmarks.py
scripts/profiling/: profile_markdown_converter.sh
src/: __init__.py  chunker.rs  core.rs  core_test.rs  html_parser.rs  js_renderer.rs  lib.rs  markdown_converter.rs  simd_text.rs  tests.rs  tests.rs.bak
static/: index.html
test_data/: large.html  medium.html  sample.md
tests/: conftest.py  fix_imports.py  test_async_performance.py  test_benchmarks.py  test_cross_encoder.py  test_docker_setup.py  test_simple_docker.py
tests/RAGnificent/: __init__.py  __main__.py  ragnificent_rs.py
tests/benchmarks/: test_performance.py
tests/integration/: test_e2e_rag_workflow.py  test_rag_integration.py
tests/rust/: test_python_bindings.py
tests/unit/: test_chunk_utils.py  test_chunk_utils_edge_cases.py  test_config.py  test_embedding_edge_cases.py  test_embedding_edge_cases_part2.py  test_embedding_service.py  test_index_step_regression.py  test_main.py  test_markdown_conversion_regression.py  test_nested_header_chunking.py  test_pipeline_edge_cases.py  test_pipeline_edge_cases_part2.py  test_pipeline_imports.py  test_scraper_coverage.py  test_scraper_error_handling.py  test_search_edge_cases.py  test_search_edge_cases_part2.py  test_security.py  test_sitemap_utils.py  test_sitemap_utils_edge_cases.py  test_throttle.py  test_validators.py
tests/utils/: __init__.py  performance_testing.py
tutorial_chunks/: chunks.jsonl
v1_implementation/: .env.example  1_extraction.py  2_chunking.py  3_embedding.py  4_search.py  5_chat.py  __init__.py  agent.py  chat.py  chunking.py  config.py  embedding.py  embedding_service.py  extraction.py  requirements.txt  run_rag_pipeline.py  search.py  vector_store.py
v1_implementation/docling/: document_converter.py
v1_implementation/utils/: __init__.py  crawler.py  sitemap.py
(+21 files in other folders)
