[package]
name = "RAGnificent"
version = "1.0.0"
edition = "2024"

[lib]
name = "ragnificent_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
scraper = "0.23.1"
url = "2.5.4"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json"] }
headless_chrome = { version = "1.0.17", optional = true }
tokio-test = "0.4.4"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
quick-xml = { version = "0.37.5", features = ["serialize"] }
tokei = "12.1.2"
rayon = "1.10.0"
heaptrack = "0.4.0"
pyroscope = "0.5.8"

[features]
default = []
real_rendering = ["headless_chrome"]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tokio = { version = "1.45.1", features = ["full", "test-util"] }

[[bench]]
name = "RAGnificent_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
# For best performance on your hardware, build with:
#   cargo build --release --target-cpu=native
opt-level = 3
debug = false

[profile.release-with-debug]
inherits = "release"
debug = 1  # Enable debug symbols for profiling

[profile.bench]
inherits = "release"
debug = true  # Enable debug symbols for benchmarking
lto = true
codegen-units = 1
opt-level = 3
