[project]
name = "RAGnificent"
version = "1.0.0"
description = "HTML to Markdown converter with support for multiple output formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core web scraping
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "markdownify>=1.1.0",
    # System utilities
    "psutil>=5.9.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.0",
    # Configuration and validation
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    # HTTP and async
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    # CLI and output
    "rich>=13.7.1",
    "typer[all]>=0.12.0",
    # Caching
    "diskcache>=5.6.3",
    "joblib>=1.3.2",
    # ML and vector operations
    "numpy>=1.26.0,<3.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0,<3.0",
    "transformers==4.53.0",
    "qdrant-client>=1.14.2",
    "openai>=1.78.0",
    # Web API
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "python-multipart>=0.0.9",
    # Monitoring and security
    "sentry-sdk[fastapi]>=2.29.1",
    "bleach>=6.2.0",
    # Testing (included in main for test discovery)
    "responses>=0.25.7",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.6",
    "responses>=0.25.7",
    # Code formatting and linting
    "black>=24.4.2",
    "ruff>=0.11.9",
    "mypy>=1.15.0",
    "isort>=5.13.2",
    "pylint>=3.1.0",
    "flake8>=7.1.0",
    # Code quality
    "sourcery>=1.36.0",
    # Type stubs
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
    "types-python-dateutil>=2.8.19",
    "types-psutil>=5.9.5",
    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.6",
    "responses>=0.25.7",
]
js = [
    "playwright>=1.52.0",
]

# CPU-only / lite path (avoid heavy ML stacks)
lite = [
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.3",
]

[project.scripts]
RAGnificent = "RAGnificent.__main__:main"

[project.urls]
Homepage = "https://github.com/ursisterbtw/RAGnificent"
Documentation = "https://github.com/ursisterbtw/RAGnificent#readme"
Issues = "https://github.com/ursisterbtw/RAGnificent/issues"

[tool.pytest.ini_options]
benchmark_min_rounds = 5
benchmark_max_time = 1.0
benchmark_save = true
benchmark_save_data = true
benchmark_enable = false
benchmark_group_by = "group"
benchmark_sort = "name"
benchmark_columns = ["min", "max", "mean", "stddev", "median", "iqr", "outliers", "rounds", "iterations"]
benchmark_timer = "time.perf_counter"
benchmark_disable_gc = true
benchmark_warmup = true
benchmark_skip = true
benchmark_only = false
benchmark_max_iterations = 100000
benchmark_min_time = 0.000005

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "T20", "RET", "ERA", "PL"]
ignore = ["E203", "E501", "E402", "ERA001", "B007", "SIM117", "PLR2004", "F841", "N999", "PLR0913", "PLW0603", "B017", "SIM102", "PLR0912", "F821", "N806", "PLR0915", "F401", "PLR0911"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[build-system]
requires = ["wheel","setuptools","maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "RAGnificent.ragnificent_rs" # Adjusted to match the new Rust library name
